unpackaged/objects/copadovsm__Process_Block__c.object
<CustomObject>
	<fields>
		<fullName>copadovsm__Active_Criteria__c</fullName>
		<inlineHelpText>The Active Criteria should be what is “in progress” or actual “working/active” values. These will be configured from the Primary Field that is selected on the VSM.</inlineHelpText>
		<label>Active Criteria</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Active__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Active</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadovsm__CA_Threshold_Type__c</fullName>
		<label>CA Threshold Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Lower Threshold</fullName>
					<default>true</default>
					<label>Lower Threshold</label>
				</value>
				<value>
					<fullName>Upper Threshold</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadovsm__CA_Threshold__c</fullName>
		<label>CA Threshold</label>
		<precision>3</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copadovsm__Description__c</fullName>
		<inlineHelpText>A brief description of the Process Block.</inlineHelpText>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Lead_Time_Threshold_Type__c</fullName>
		<label>Lead Time Threshold Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Upper Threshold</fullName>
					<default>true</default>
					<label>Upper Threshold</label>
				</value>
				<value>
					<fullName>Lower Threshold</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadovsm__Lead_Time_Threshold__c</fullName>
		<label>Lead Time Threshold</label>
		<precision>7</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copadovsm__Order__c</fullName>
		<defaultValue>1</defaultValue>
		<inlineHelpText>Order of Process Block within a Stage.</inlineHelpText>
		<label>Order</label>
		<precision>2</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copadovsm__Record_Types__c</fullName>
		<inlineHelpText>coma separated list of values. Empty means all.</inlineHelpText>
		<label>Record Types</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Stage__c</fullName>
		<label>Stage</label>
		<referenceTo>copadovsm__Stage__c</referenceTo>
		<relationshipLabel>Process Blocks</relationshipLabel>
		<relationshipName>Process_Blocks</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<reparentableMasterDetail>true</reparentableMasterDetail>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copadovsm__Waiting_Criteria__c</fullName>
		<formula>copadovsm__Stage__r.copadovsm__Waiting_Criteria__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Process blocks inherits waiting criteria information from their parent Stage.</inlineHelpText>
		<label>Waiting Criteria</label>
		<type>Text</type>
	</fields>
	<label>Process Block</label>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Process Blocks</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>